# polaris_dvc

./: .env.local.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dvc-parity.yml  pages.yml  release.yml
crates/polaris-cli/: Cargo.toml
crates/polaris-cli/src/: main.rs
crates/polaris-core/: Cargo.toml
crates/polaris-core/src/: engine.rs  error_codes.rs  jid_registry.rs  lib.rs  output.rs  report.rs
crates/polaris-core/tests/: end_to_end.rs  golden.rs  jid_registry_drift.rs
crates/polaris-dvc-cli/: Cargo.toml
crates/polaris-dvc-cli/src/: main.rs
crates/polaris-dvc-core/: Cargo.toml
crates/polaris-dvc-core/src/: engine.rs  error_codes.rs  jid_registry.rs  lib.rs  output.rs  report.rs
crates/polaris-dvc-core/src/rules/: mod.rs  schema.rs
crates/polaris-dvc-core/tests/: end_to_end.rs  golden.rs  jid_registry_drift.rs
crates/polaris-dvc-core/tests/support/: mod.rs
crates/polaris-dvc-format/: Cargo.toml
crates/polaris-dvc-format/src/: lib.rs
crates/polaris-dvc-hwpx/: Cargo.toml
crates/polaris-dvc-hwpx/src/: container.rs  lib.rs  section.rs  types.rs
crates/polaris-dvc-schema/: Cargo.toml
crates/polaris-dvc-schema/src/: generated_owpml.rs  lib.rs  validator.rs
crates/polaris-dvc-schema/tests/: integration.rs
crates/polaris-dvc-wasm/: Cargo.toml
crates/polaris-dvc-wasm/src/: lib.rs
crates/polaris-format/: Cargo.toml
crates/polaris-format/src/: lib.rs
crates/polaris-hwpx/: Cargo.toml
crates/polaris-hwpx/src/: container.rs  header.rs  lib.rs  section.rs  types.rs
crates/polaris-rhwpdvc-cli/: Cargo.toml
crates/polaris-rhwpdvc-cli/src/: main.rs
crates/polaris-rhwpdvc-core/: Cargo.toml
crates/polaris-rhwpdvc-core/src/: engine.rs  error_codes.rs  lib.rs  output.rs  report.rs
crates/polaris-rhwpdvc-core/src/rules/: loader.rs  mod.rs  schema.rs
crates/polaris-rhwpdvc-core/tests/: end_to_end.rs  golden.rs  jid_registry_drift.rs
crates/polaris-rhwpdvc-core/tests/support/: mod.rs
crates/polaris-rhwpdvc-format/: Cargo.toml
crates/polaris-rhwpdvc-format/src/: lib.rs
crates/polaris-rhwpdvc-hwpx/: Cargo.toml
crates/polaris-rhwpdvc-hwpx/src/: container.rs  header.rs  lib.rs  section.rs  types.rs
crates/polaris-rhwpdvc-schema/: Cargo.toml
crates/polaris-rhwpdvc-schema/src/: generated_owpml.rs  lib.rs  model.rs  validator.rs
crates/polaris-rhwpdvc-schema/tests/: integration.rs
crates/polaris-rhwpdvc-wasm/: Cargo.toml
crates/polaris-rhwpdvc-wasm/src/: lib.rs
crates/polaris-wasm/: Cargo.toml
crates/polaris-wasm/src/: lib.rs
docs/: cli-compat.md  dvc-parity-handoff.md  dvc-parity-status.md  golden-tests.md  hwpx-validation-scope.md  jid-registry.md  parity-roadmap.md  schema-drift-catalog.md  spec-authoring.md  utm-windows-setup.md  windows-parity-howto.md
examples/web/: README.md  app.js  index.html
scripts/: diff-dvc-outputs.sh  parity-probes.ps1  parity-windows.ps1  push.sh
standards/: README.md
testdata/golden/: README.md  manifest.json
testdata/golden/01_clean/: doc.hwpx  spec.json
testdata/golden/02_fontsize_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/03_bold_mismatch/: doc.hwpx  expected.json  expected.xml
testdata/golden/04_font_allowlist_miss/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/05_font_allowlist_hit/: doc.hwpx
testdata/golden/06_linespacing_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/07_mixed_paragraphs/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/08_style_forbidden/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/09_hyperlink_forbidden/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/10_macro_forbidden/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/11_table_border_type_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/12_lone_table_with_table_in_table_rule/: doc.hwpx  spec.json
testdata/golden/13_charshape_ratio_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/14_parashape_indent_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/15_specialcharacter_below_minimum/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/16_bullet_char_not_allowed/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/17_outlineshape_numtype_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/18_paranumbullet_numshape_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/19_fontsize_range_ok/: doc.hwpx  spec.json
testdata/golden/20_fontsize_range_above_max/: doc.hwpx  expected.json  expected.xml
testdata/golden/21_table_size_width_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/22_table_margin_range_ok/: doc.hwpx  expected.xml  spec.json
testdata/golden/23_table_treat_as_char_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/24_table_bgfill_type_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/25_table_bgfill_facecolor_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/26_table_bgfill_type_strict_filters_out/: doc.hwpx  spec.json
testdata/golden/27_charshape_emboss_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/28_charshape_shadow_mismatch/: expected.json  expected.xml  spec.json
testdata/golden/29_charshape_shadowtype_mismatch/: doc.hwpx  expected.json  expected.xml  spec.json
testdata/golden/30_charshape_shadow_x_outside_range/: doc.hwpx  spec.json  (+2 more)
testdata/real-samples/: 260210 즉시 (보도) 국가AI전략위, 「대한민국 인공지능행동계획」 수립 추진현황 국무회의 보고(수정).hwpx  empty.hwpx  에러페이지.hwpx  테스트.hwpx  한컴2014_테스트.hwpx
testdata/rules/: minimal_spec.json
tools/gen-jids/: Cargo.toml
tools/gen-jids/src/: main.rs
tools/gen-owpml/: Cargo.toml
tools/gen-owpml/src/: main.rs
(+47 files in other folders)
