[workspace]
resolver = "2"
members = [
    "crates/polaris-rhwpdvc-core",
    "crates/polaris-rhwpdvc-hwpx",
    "crates/polaris-rhwpdvc-format",
    "crates/polaris-rhwpdvc-cli",
    "crates/polaris-rhwpdvc-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/miles-hs-lee/polaris_rhwpdvc"
authors = ["Polaris RHWPDVC Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["serialize"] }
clap = { version = "4", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

polaris-rhwpdvc-core = { path = "crates/polaris-rhwpdvc-core", version = "0.1.0" }
polaris-rhwpdvc-hwpx = { path = "crates/polaris-rhwpdvc-hwpx", version = "0.1.0" }
polaris-rhwpdvc-format = { path = "crates/polaris-rhwpdvc-format", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
