[workspace]
resolver = "2"
members = [
    "crates/polaris-dvc-core",
    "crates/polaris-dvc-hwpx",
    "crates/polaris-dvc-format",
    "crates/polaris-dvc-schema",
    "crates/polaris-dvc-cli",
    "crates/polaris-dvc-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/miles-hs-lee/polaris_rhwpdvc"
authors = ["Polaris DVC Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["serialize"] }
clap = { version = "4", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

polaris-dvc-core = { path = "crates/polaris-dvc-core", version = "0.1.0" }
polaris-dvc-hwpx = { path = "crates/polaris-dvc-hwpx", version = "0.1.0" }
polaris-dvc-format = { path = "crates/polaris-dvc-format", version = "0.1.0" }
polaris-dvc-schema = { path = "crates/polaris-dvc-schema", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
