[package]
name = "polaris-dvc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DVC-compatible CLI frontend for the polaris HWPX validator."

[[bin]]
name = "polaris-dvc"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
polaris-dvc-core = { workspace = true }
polaris-dvc-hwpx = { workspace = true }
polaris-dvc-format = { workspace = true }
