[package]
name = "polaris-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Format detection and DocumentParser trait. HWPX today, HWP 5.0 slot reserved."

[dependencies]
thiserror = { workspace = true }
polaris-hwpx = { workspace = true }

[features]
default = []
hwp5 = []
