[package]
name = "polaris-rhwpdvc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "DVC-compatible CLI frontend for the polaris HWPX validator."

[[bin]]
name = "polaris-rhwpdvc"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
polaris-rhwpdvc-core = { workspace = true }
polaris-rhwpdvc-hwpx = { workspace = true }
polaris-rhwpdvc-format = { workspace = true }
