[package]
name = "polaris-rhwpdvc-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "KS X 6101 (OWPML) XSD model + XML conformance validator. Generated data only — standards/ source materials live locally and are not redistributed."

[dependencies]
quick-xml = { workspace = true }
thiserror = { workspace = true }
