[package]
name = "polaris-rhwpdvc-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WASM bindings for the polaris HWPX validator (browser + Node)."

[lib]
crate-type = ["cdylib", "rlib"]

# Skip wasm-opt — wasm-pack's bundled binary lags behind rustc and
# chokes on features newer toolchains emit (e.g., `nontrapping-fptoint`).
# Re-enable once wasm-pack ships a matching wasm-opt, or have CI
# install wasm-opt explicitly.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[dependencies]
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
polaris-rhwpdvc-core = { workspace = true }
polaris-rhwpdvc-hwpx = { workspace = true }
polaris-rhwpdvc-format = { workspace = true }

# Ensure getrandom uses the JS shim when compiling to wasm32.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
