[package]
name = "polaris-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WASM bindings for the polaris HWPX validator (browser + Node)."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
polaris-core = { workspace = true }
polaris-hwpx = { workspace = true }
polaris-format = { workspace = true }

# Ensure getrandom uses the JS shim when compiling to wasm32.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
